--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mizuki",
-  "version": "0.0.1dev",
+  "version": "1.0.4",
   "description": "a tiny javascript library that helps you create paginated behavior for your app components.",
   "main": "dist/index.js",
   "files": [
