--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.5",
   "description": "a tiny javascript library that helps you create paginated behavior for your app components.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/"
   ],
   "scripts": {
     "build": "npx del-cli --force './dist/*' && tsc && esbuild --bundle dist/index.js --minify --outfile=dist/index.js --allow-overwrite --format=esm",
-    "dev": "npx tsc --watch"
+    "dev": "npx tsc --watch",
+    "test": "jest"
   },
   "author": "jmmaa",
   "repository": {
@@ -18,10 +20,12 @@
   "type": "module",
   "private": false,
   "devDependencies": {
-    "@types/lodash.throttle": "^4.1.7",
+    "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
     "del-cli": "^5.0.0",
     "esbuild": "^0.15.12",
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
 }
