--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mizuki",
-  "version": "1.0.6",
+  "version": "1.1.6dev",
   "description": "a tiny javascript library that helps you create paginated behavior for your app components.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "npx del-cli --force './dist/*' && tsc && esbuild --bundle dist/index.js --minify --outfile=dist/index.js --allow-overwrite --format=esm",
     "dev": "npx tsc --watch",
-    "test": "jest"
+    "test": "jest",
+    "start": "npx ts-node src/index.ts"
   },
   "author": "jmmaa",
   "repository": {
@@ -26,6 +27,7 @@
     "esbuild": "^0.15.12",
     "jest": "^29.2.2",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
