--- a/tsconfig.json
+++ b/tsconfig.json
@@ -100,6 +100,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
+  "ts-node": { "esm": true },
   "include": ["src"],
   "exclude": ["node_modules", "tests"]
 }
