--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mizuki",
-  "version": "1.1.6dev",
+  "version": "1.1.6-dev",
   "description": "a tiny javascript library that helps you create paginated behavior for your app components.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
