--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dist/"
   ],
   "scripts": {
-    "build": "npx del-cli --force './dist/*' && tsc && esbuild --bundle src/index.ts --outfile=dist/index.js --minify --format=esm",
-    "dev": "npx tsc --watch",
+    "build": "npx del-cli --force './dist/*' && tsc && esbuild --bundle src/index.ts --outfile=dist/index.js --format=esm --minify",
+    "build-dev": "tsc && esbuild --bundle src/index.ts --outfile=dist/index.js --format=esm",
+    "dev": "watchexec -i 'src/*' yarn build-dev",
     "test": "jest"
   },
   "author": "jmmaa",
@@ -25,8 +26,11 @@
     "del-cli": "^5.0.0",
     "esbuild": "^0.15.12",
     "jest": "^29.2.2",
+    "request": "^2.88.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
-  }
+    "typescript": "^4.8.4",
+    "watchexec-bin": "^1.0.0"
+  },
+  "dependencies": {}
 }
