--- a/examples/vanilla-app/package.json
+++ b/examples/vanilla-app/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "mizuki": "file:../..",
     "vite": "^3.2.0"
+  },
+  "dependencies": {
+    "bezier-easing": "^2.1.0",
+    "eases": "^1.0.8"
   }
 }
