--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,6 +101,6 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
   "ts-node": { "esm": true },
-  "include": ["src"],
+  "include": ["src", "legacy/handlers"],
   "exclude": ["node_modules", "tests"]
 }
