--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mizuki",
-  "version": "2.0.0-dev",
+  "version": "2.0.0-dev.1",
   "description": "a tiny javascript library that helps you create your own pagination behavior",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -11,10 +11,10 @@
   "scripts": {
     "build-esm": "esbuild --bundle src/index.ts --outfile=dist/index.esm.js --format=esm --minify --tree-shaking=true --target=esnext",
     "build-esm-dev": "esbuild --bundle src/index.ts --outfile=dist/index.esm.js --format=esm --target=esnext",
-    "build-cjs": "esbuild --bundle src/index.ts --outfile=dist/index.js --format=cjs --minify --tree-shaking=true --target=esnext",
-    "build-cjs-dev": "esbuild --bundle src/index.ts --outfile=dist/index.js --format=cjs --target=esnext",
-    "build-dev": "tsc && yarn build-esm-dev && yarn build-cjs-dev",
-    "build": "npx del-cli --force './dist/*' && tsc && yarn build-esm && yarn build-cjs",
+    "build-iife": "esbuild --bundle src/index.ts --outfile=dist/index.js --format=iife --minify --tree-shaking=true --target=esnext",
+    "build-iife-dev": "esbuild --bundle src/index.ts --outfile=dist/index.js --format=iife --target=esnext",
+    "build-dev": "tsc && yarn build-esm-dev && yarn build-iife-dev",
+    "build": "npx del-cli --force './dist/*' && tsc && yarn build-esm && yarn build-iife",
     "dev": "watchexec -i 'src/*' yarn build-dev",
     "test": "jest"
   },
@@ -28,7 +28,7 @@
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
     "del-cli": "^5.0.0",
-    "esbuild": "^0.15.12",
+    "esbuild": "^0.15.16",
     "jest": "^29.2.2",
     "request": "^2.88.2",
     "ts-jest": "^29.0.3",
