--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mizuki",
-  "version": "2.0.0-dev.1",
+  "version": "2.0.0",
   "description": "a tiny javascript library that helps you create your own pagination behavior",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
